--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -11,7 +11,7 @@ scrape_configs:
       module: [http_2xx]
     static_configs:
       - targets:
-        - https://skillfactory.ru
+        - https://lms.skillfactory.ru
     relabel_configs:
       - source_labels: [__address__]
         target_label: __param_target
@@ -19,3 +19,13 @@ scrape_configs:
         target_label: instance
       - target_label: __address__
         replacement: blackbox-exporter:9115
+
+rule_files:
+  - 'alert.rules'
+
+alerting:
+  alertmanagers:
+  - scheme: http
+    static_configs:
+    - targets:
+      - "alertmanager:9093"
